stylesheets/booking.css
/* ... */
.button_style{
    border: 3px solid black;
    padding: 5px 10px;
    font-size: 2vh;
    cursor: pointer;
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
    background-color: transparent;
}



/* --------close container------*/

/* GUIDE*/
.guide{
    min-height: 90vh;
    margin: auto;

}

.guide h2{
    margin-left: 20vh;
    color: rgb(255, 255, 255);
    font-size: 2.5vw;
    margin-top: 10vh;
}

.guide_main{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 30px;
    margin-bottom: 80px;
}

.guide_container1{
    margin-top: 30px;
    width: 400px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.guide_container2{
    margin-top: 30px;
    width: 400px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.guide_container3{
    margin-top: 30px;
    width: 400px;
    height: 450px;
    background: #C4C4C4;
    overflow: hidden;
}

.guideimg img{
    width: 100%; 
}
.guideimg{
    width:100%;
    height: 50%;
    overflow: hidden;
}

.guide_button{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 4vh;
}

.guide_style{
    border: 3px solid black;
    padding: 5px 10px;
    font-size: 2vh;
    cursor: pointer;
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
    background-color: transparent;
}

.guidefirst{
    padding: 10px;
    align-items: center;
}

.guidefirst p{
    margin-left: 10px;
    font-size: 2.5vh;
}

.guidefirst h1{
    font-size: 4vh;
    font-weight: bold;
    text-align: center;
}


/*----*----GUIDE----*-----*/

/* Gallery*/
.gallery_container{
    min-height: 8vh;
    background:#141824 ;
    color: beige;
    padding: 5% 8% 5% 8%;
    margin-top: -1%;
}

.h2gallery{
    font-size: 2.5vw;
    padding-bottom: 5vh;
}
.row { 
    display: flex;
    flex-wrap: wrap;
    padding: 0 5px;
  }
  
.column {
    flex: 25%;
    max-width: 25%;
    padding: 0 5px;
  }
  
.column img {
    margin-top: 8px;
    padding: 4px;
    vertical-align: middle;
    width: 100%;
    transition: all .5s;
  }

.column img:hover{
      transform: scale(1.2);
  }
  
@media screen and (max-width: 800px) {
    .column {
      -ms-flex: 50%;
      flex: 50%;
      max-width: 50%;
    }
  }

@media screen and (max-width: 600px) {
    .column {
      -ms-flex: 100%;
      flex: 100%;
      max-width: 100%;
    }
  }

  /* About US*/

.aboutus{
    background: #141824;
    color: white;
    
}

.aboutus_details{
    
    padding-left: 8%;
    padding-right: 8%;
}

.h1aboutus{
    font-size: 5vh;
    padding-bottom: 5vh;
    padding-left: 8%;
}

.aboutus_container{
    display: flex;
    

}

.aboutus_imgdiv{
    margin-bottom: 50px;
    margin-right: 50px;
    width: 200%;
    height: 100%;
}

.aboutus_container .aboutus_img{
    width: 100%;
    height: 100%;
    margin-bottom: 5%;
    padding-right: 10%;
}
  /*Footer*/

  footer{
    display: flex;
    min-height: 5vh;
    background: #000000;
    padding-left: 8%;
    padding-right: 8%;
    padding-top: 2%;
    padding-bottom: 2%;
    align-items: center;
    justify-content: space-between;
    
}
address a{
    font-size: 2.5vh;
    padding-left: 5px;
    color: whitesmoke;
    font-style: normal;
}

.gmail{
    padding-top: 5px;
}
.social_media{
    width: 20%;
    justify-content: center;
}

.social_media ul{
    display: flex;
    justify-content: space-between;
    
}
.social_media h1{
    text-align: center;
    color: blanchedalmond;
    font-size: 2.5vh;
    padding-bottom: 5vh;
}

.social{
    justify-content: center;
    padding-right: 2%;
}

.social ul{
    text-align: center;
    display: flex;
    justify-content: space-around;
    
}
.social h1{
    text-align: center;
    color: blanchedalmond;
    font-size: 2.5vh;
    padding-bottom: 5vh;
}

.email{
    display: flex;
}

.email input{
    border: 2px solid rgb(255, 255, 255);
    background-color: black;
}

.email button{
    padding: 5px;
    border: 2px solid white;
    font-weight: bold;
    cursor: pointer;
    width: 75px;
}
.button_email{
    height: 4vh;
    width: 50px;
    background-color: white;
    color: black;
}

@media screen and (max-width: 800px){
    footer h1{
        flex: 1;
    }

    footer img{
        widows: 10%;
    }
    
    .social_media h1{
        font-size: .8em;
    }

    .social h1{
        font-size: .8em;
    }

    address a{
        font-size: .8em;
    }
    
    footer{
        flex-direction: column;
    }

    .email input{
        border: 2px solid rgb(255, 255, 255);
        background-color: black;
    }
    .email button{
    padding: 5px;
    border: 2px solid white;
    font-weight: bold;
    cursor: pointer;
    background-color: white;
    color: black;
    }
    .social_media{
        text-align: center;
    }
    .social_media ul{
        justify-content: space-evenly;
        padding-right: 3em;
        display: flex;
    }
    .button_email{
        height: 5vh;
        width: 50px;
        background-color: white;
        color: black;
    }
}
@media only screen and (min-width: 768px) {
    .avatar_image {
        float: none;
        border-radius: 0;
        margin: 0;
    }
    .aboutus_div {
        padding: 3vh;
        margin-left: 10%;
        margin-right: 10%;
        width: 80%;
    }

    .nav-container {
        width: 100%;
        position: relative;
    }
    .nav-links {
        display: inline;
        text-align: right;
    }
    .logo h4{
        font-size: 4vh;
    }
}
@media only screen and (max-width: 600px) {
    .avatar_image {
        float: none;
        border-radius: 0;
        margin: 0;
    }
    .aboutus_div {
        padding: 3vh;
        margin-left: 10%;
        margin-right: 10%;
        width: 80%;
    }

    .nav-container {
        width: 100%;
        position: relative;
    }
    .nav-links {
        display: inline;
        text-align: right;
    }
    .logo h4{
        font-size: 4vh;
    }
}
/* ... */

